<resources>
    <string name="app_name">Cbr App</string>
    <string name="welcome_msg">Hello!</string>
    <string name="email_hint">Email</string>
    <string name="forgot_pswd">forgot password</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="login_button">LOGIN</string>
    <string name="sign_up">Sign up</string>
    <string name="reset_pswd">reset password</string>
    <string name="no_text"> </string>
    <string name="sign_up_button">SIGN UP</string>
    <string name="log_in">Login</string>
    <string name="action_settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="home_title">Home</string>
    <string name="cbr_wash_book">Car Wash</string>
    <string name="log_out">Log Out</string>
    <string name="profile">Profile</string>

    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="lbl_forgot_password">Forgot Password?</string>


    <string name="cbr_logo">cbr logo</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="update">update profile</string>
    <string name="book_car_wash">Book car wash</string>
    <string name="welcome">Welcome</string>
    <string name="booking_carwash">Booking Car Wash</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="calendar">Calendar</string>
    <string name="info">Info</string>
    <string name="profile_name">Profile Name</string>
    <string name="car_number_plate">Car Number plate</string>
    <string name="user_name">User Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="booking">Booking</string>
    <string name="services">Services</string>
    <string name="paint_job">Paint Job</string>
    <string name="notifications">Notifications</string>
    <string name="history">History</string>
    <string name="look_book">Look Book</string>
    <string name="phone_number">Phone Number</string>
    <string name="user_profile_image">user profile image</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="garage_1">Garage #1</string>
    <string name="address_of_garage_1">Address of garage #1</string>
    <string name="david">David</string>
    <string name="_9_00_11_00">9:00 - 11:00</string>
    <string name="available">Available</string>
    <string name="thank_you_for_booking_our_service">Thank you for booking our service</string>
    <string name="_9_00am_on_24_7_2020">09:00 on 24/7/2020</string>
    <string name="booking_information">Booking Information</string>
    <string name="_254712345678">+254-712-345678</string>
    <string name="_0900_1900">0900-1900</string>
    <string name="confirm">Confirm</string>
    <string name="address">Address:</string>
    <string name="time">Time:</string>
    <string name="time_remaining">Time Remaining:</string>
    <string name="user_mobile_number">User Mobile number: </string>
    <string name="_1234567890">1234567890</string>
    <string name="delete">Delete</string>
    <string name="change">Change</string>
    <string name="wash">Wash</string>
    <string name="paint">Paint</string>
    <string name="systems">Systems</string>
</resources>