<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorCbrBlack"
    android:padding="16dp"
    tools:context="com.example.cbrapp.SignUpActivity">

    <ImageView
        android:id="@+id/cbrlogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/cbr_logo2"
        android:contentDescription="@string/cbr_logo" />

    <EditText
        android:id="@+id/user_name"
        android:hint="@string/user_name"
        android:inputType="text"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorWhite"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:layout_below="@+id/cbrlogo"
        android:autofillHints="" />

    <EditText
        android:id="@+id/email"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:maxLines="1"
        android:layout_height="40dp"
        android:background="@color/colorWhite"
        android:layout_below="@+id/user_name"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/car_number_plate"
        android:hint="@string/car_number_plate"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:maxLines="1"
        android:background="@color/colorWhite"
        android:layout_below="@+id/email"/>

    <EditText
    android:id="@+id/passwd"
    android:hint="@string/password_hint"
    android:inputType="textPassword"
    android:maxLines="1"
    android:layout_width="match_parent"
        android:layout_height="40dp"
    android:background="@color/colorWhite"
    android:layout_centerHorizontal="true"
    android:layout_below="@+id/mobile_number"
    android:layout_margin="10dp"
    android:autofillHints="" />

    <EditText
        android:id="@+id/mobile_number"
        android:hint="@string/mobile_number"
        android:inputType="number"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorWhite"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/car_number_plate"
        android:layout_margin="10dp"
        android:autofillHints="" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_below="@+id/passwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/colorCbrYellow"
        android:text="@string/sign_up" />

    <Button
        android:id="@+id/login_button"
        android:layout_below="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@null"
        android:text="@string/log_in"
        android:textColor="@color/colorCbrYellow"/>

    <Button
        android:id="@+id/reset_button"
        android:text="@string/forgot_pswd"
        android:textColor="@color/colorCbrYellow"
        android:layout_below="@id/login_button"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

</RelativeLayout>