<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorCbrBlack"
    android:padding="16dp"
    tools:context="com.example.cbrapp.LoginActivity">

    <ImageView
        android:id="@+id/cbrlogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/cbr_logo2"
        android:contentDescription="@string/cbr_logo" />

    <EditText
        android:id="@+id/email"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:maxLines="1"
        android:layout_height="50dp"
        android:background="@color/colorWhite"
        android:layout_below="@+id/cbrlogo"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:autofillHints="" />

    <EditText
        android:id="@+id/passwd"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorWhite"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/email"
        android:layout_marginTop="20dp"
        android:autofillHints="" />

    <Button
        android:id="@+id/log_in"
        android:layout_below="@id/passwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/colorCbrYellow"
        android:text="@string/log_in" />

    <Button
        android:id="@+id/sign_up"
        android:layout_below="@+id/log_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/colorCbrYellow"
        android:text="@string/sign_up" />

    <Button
        android:id="@+id/forgot_pass"
        android:text="@string/forgot_pswd"
        android:textColor="@color/colorCbrYellow"
        android:layout_below="@id/sign_up"
        android:layout_marginTop="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />


</RelativeLayout>