<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorCbrBlack"
    android:padding="16dp"
    tools:context="com.example.cbrapp.ResetPasswordActivity">

    <ImageView
        android:id="@+id/cbrlogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/cbr_logo2"
        android:contentDescription="@string/cbr_logo" />

    <TextView
        android:id="@+id/forgotTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/lbl_forgot_password"
        android:textColor="@color/colorCbrYellow"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/cbrlogo"/>

    <TextView
        android:id="@+id/forgot_Msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/forgot_password_msg"
        android:textColor="@color/colorCbrYellow"
        android:textSize="14sp"
        android:layout_below="@+id/forgotTxt"/>

    <EditText
        android:id="@+id/email"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:maxLines="1"
        android:layout_height="50dp"
        android:background="@color/colorWhite"
        android:layout_below="@+id/forgot_Msg"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:autofillHints="" />

    <Button
        android:id="@+id/btn_reset_password"
        android:layout_below="@+id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/reset_pswd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorCbrYellow"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

</RelativeLayout>