<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorCbrBlack">
    <ImageView
        android:id="@+id/cbr_logo"
        android:src="@drawable/cbr_logo2"
        android:layout_width="wrap_content"
        android:layout_height="200dp"/>

    <LinearLayout
        android:orientation="vertical"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:background="@drawable/rounded_dialog"
        android:layout_height="match_parent">
        
        <TextView
            android:text="@string/thank_you_for_booking_our_service"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorCbrBlack"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/booking_information"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/ic_baseline_event_note_24"
                android:layout_gravity="bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/txt_booking_time_date_txt"
                android:text="@string/_9_00am_on_24_7_2020"
                android:textSize="14sp"
                android:layout_marginStart="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/ic_baseline_account_circle_black_24"
                android:layout_gravity="bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/txt_booking_attendant_txt"
                android:text="@string/david"
                android:textSize="14sp"
                android:layout_marginStart="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        
        <View
            android:layout_marginTop="4dp"
            android:background="@color/colorCbrBlack"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            android:text="@string/garage_1"
            android:id="@+id/txt_booking_garage_name"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/ic_baseline_web_24"
                android:layout_gravity="bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/txt_garage_address_txt"
                android:text="@string/address_of_garage_1"
                android:textSize="14sp"
                android:layout_marginStart="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/phone_small_icon"
                android:layout_gravity="bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/txt_garage_phone_number"
                android:text="@string/_254712345678"
                android:textSize="14sp"
                android:layout_marginStart="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/ic_baseline_access_time_24"
                android:layout_gravity="bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/txt_garage_opening_hours"
                android:text="@string/_0900_1900"
                android:textSize="14sp"
                android:layout_marginStart="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_confirm"
            android:text="@string/confirm"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </com.google.android.material.button.MaterialButton>



    </LinearLayout>


</LinearLayout>