<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorCbrBlack"
    android:orientation="vertical"
    tools:context="com.example.cbrapp.Fragments.ProfileFragment">
    <!-- Header Layout-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:padding="20dp">
        <ImageView
            android:id="@+id/user_profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_baseline_account_box_24"
            android:contentDescription="@string/user_profile_image" />
    </RelativeLayout>
    <!-- User data Layout-->
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <com.google.android.material.textview.MaterialTextView
            android:hint="@string/profile_name"
            android:id="@+id/user_name_profile"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/user_name"
            android:textColor="@color/colorCbrYellow">
        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textview.MaterialTextView
            android:hint="@string/email_hint"
            android:id="@+id/user_email_profile"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/email_hint"
            android:textColor="@color/colorCbrYellow">

        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textview.MaterialTextView
            android:hint="@string/phone_number"
            android:id="@+id/user_phone_No"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/phone_number"
            android:textColor="@color/colorCbrYellow">

        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textview.MaterialTextView
            android:hint="@string/car_number_plate"
            android:id="@+id/user_car_No_plate"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textColor="@color/colorCbrYellow"
            android:text="@string/car_number_plate">

        </com.google.android.material.textview.MaterialTextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_update"
            android:hint="@string/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:drawableLeft="@drawable/username_small_icon"
                android:drawablePadding="10dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_update"
            android:hint="@string/email_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:drawableLeft="@drawable/mail_small_icon"
                android:drawablePadding="10dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_number_update"
            android:hint="@string/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:drawableLeft="@drawable/phone_small_icon"
                android:drawablePadding="10dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/car_number_plate"
            android:id="@+id/car_number_plate_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:drawableLeft="@drawable/car_small_icon"
                android:drawablePadding="10dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/update_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/colorCbrYellow"
        android:text="@string/update">
    </Button>

</LinearLayout>