<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp"
    android:orientation="vertical"
    android:background="@color/colorCbrBlack"
    tools:context="com.example.cbrapp.Fragments.ServicesFragment">
    
    <View
        android:background="@android:color/holo_orange_dark"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        android:paddingTop="10dp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_wash"
            app:chipBackgroundColor="@color/colorCbrYellow"
            android:textColor="@color/colorCbrBlack"
            android:text="@string/wash"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_paint"
            app:chipBackgroundColor="@android:color/darker_gray"
            android:textColor="@android:color/white"
            android:text="@string/paint"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_systems"
            app:chipBackgroundColor="@android:color/darker_gray"
            android:textColor="@android:color/white"
            android:text="@string/systems"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </com.google.android.material.chip.ChipGroup>

    <View
        android:layout_marginTop="10dp"
        android:background="@android:color/holo_orange_dark"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_items"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>